# WinTerm

./: .gitignore  CMakeLists.txt  Makefile  README.md  ansi  ansi.c  test  test.c
examples/: CMakeLists.txt  exp.cpp
include/: ansi_escape_codes.h  canvas.hpp  defs.hpp  dirio.h  expl.h  handle.hpp  linebuf.h  matmath.hpp  msg.hpp  numberformat.h  output.h  queue.hpp  rect.hpp  registry.hpp  terminal.h  userinput.h  winTerm.hpp  window.hpp
include/WinTerm/: canvas.hpp  enums.hpp  message.hpp  privates.hpp  rect.hpp  styles.hpp  winTerm.hpp  window.hpp
include/WinTerm/ansi/: stdinReader.hpp
include/WinTerm/events/: event.hpp  messages.hpp  queue.hpp  resize.hpp
include/WinTerm/render/: canvas.hpp  cell.hpp  misc.hpp  render.hpp  renderItems.hpp
include/WinTerm/window/: window.hpp
include/generics/: allocator.hpp  boundedQueue.hpp  channel.hpp
src/: CMakeLists.txt  ansi_escape_codes.h  canvas.cpp  cell.cpp  dirio.c  dirio.h  event.cpp  expl.c  expl.cpp  expl.h  linebuf.c  linebuf.h  main.c  main.cpp  matmath.cpp  message.cpp  numberformat.c  numberformat.h  output.c  output.h  rect.cpp  render.cpp  stdinReader.cpp  terminal.c  terminal.h  userinput.c  userinput.h  winTerm.cpp  window.cpp
src/WinTerm/: canvas.cpp  event.cpp  privates.cpp  winTerm.cpp
src/WinTerm/ansi/: stdinReader.cpp
src/WinTerm/events/: event.cpp  queue.cpp  resize.cpp
src/WinTerm/misc/: size.cpp
src/WinTerm/render/: canvas.cpp  render.cpp
